--- a/index.html
+++ b/index.html
@@ -125,6 +125,6 @@
       </div>
     </div>
 
-    <script src="src/index.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
