--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
       </div>
     </div>
-
+<a href="https://github.com/Charlie-Beth/my-project">My GitHub repository</a>
     <script src="src/script.js"></script>
   </body>
 </html>
