--- a/index.html
+++ b/index.html
@@ -125,6 +125,6 @@
       </div>
     </div>
 <a href="https://github.com/Charlie-Beth/my-project">My GitHub repository</a>
-    <script src="src/script.js" target=blank></script>
+    <script src="src/script.js" target="_blank"></script>
   </body>
 </html>
