--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
       </div>
     </div>
-<a href="https://github.com/Charlie-Beth/my-project" target="_blank">My GitHub repository</a>
+<p><a href="https://github.com/Charlie-Beth/my-project" target="_blank">Open source code</a> by Charlotte Thompson</p>
     <script src="src/script.js"></script>
   </body>
 </html>
